Add ability to replace existing data instead of creating additional saved game

--- a/saved_games/saved_data.yml
+++ b/saved_games/saved_data.yml
@@ -2,7 +2,7 @@
 :name: Rimas vs Tomas
 :board: !ruby/object:Board
   board_hash:
-    1a: "♖"
+    1a: " "
     1b: "♘"
     1c: "♗"
     1d: "♕"
@@ -26,7 +26,7 @@
     3f: " "
     3g: " "
     3h: " "
-    4a: " "
+    4a: "♖"
     4b: " "
     4c: " "
     4d: " "
@@ -55,14 +55,14 @@
     7c: "♟︎"
     7d: "♟︎"
     7e: " "
-    7f: " "
+    7f: "♚"
     7g: "♟︎"
     7h: "♟︎"
     8a: "♜"
     8b: "♞"
     8c: "♝"
     8d: "♛"
-    8e: "♚"
+    8e: " "
     8f: "♝"
     8g: "♞"
     8h: "♜"
@@ -89,7 +89,7 @@
     2e: "♙"
     2f: "♙"
     2g: "♙"
-    2h: "♙"
+    2h: " "
     3a: " "
     3b: " "
     3c: " "
@@ -105,7 +105,7 @@
     4e: "♘"
     4f: " "
     4g: " "
-    4h: " "
+    4h: "♙"
     5a: "♟︎"
     5b: " "
     5c: " "
@@ -118,10 +118,10 @@
     6b: " "
     6c: " "
     6d: " "
-    6e: "♜"
+    6e: " "
     6f: " "
     6g: " "
-    6h: " "
+    6h: "♜"
     7a: " "
     7b: "♟︎"
     7c: "♟︎"
@@ -142,3 +142,75 @@
   name: Larry
 :player2: !ruby/object:Player
   name: Lukas
+---
+:name: Hooputes vs Googlems
+:board: !ruby/object:Board
+  board_hash:
+    1a: "♖"
+    1b: " "
+    1c: "♗"
+    1d: "♕"
+    1e: "♔"
+    1f: "♗"
+    1g: "♘"
+    1h: "♖"
+    2a: "♙"
+    2b: " "
+    2c: "♙"
+    2d: "♙"
+    2e: "♙"
+    2f: "♙"
+    2g: "♙"
+    2h: "♙"
+    3a: " "
+    3b: " "
+    3c: " "
+    3d: " "
+    3e: " "
+    3f: " "
+    3g: " "
+    3h: " "
+    4a: " "
+    4b: "♙"
+    4c: " "
+    4d: " "
+    4e: " "
+    4f: "♛"
+    4g: " "
+    4h: " "
+    5a: " "
+    5b: "♘"
+    5c: " "
+    5d: "♟︎"
+    5e: " "
+    5f: " "
+    5g: " "
+    5h: " "
+    6a: " "
+    6b: " "
+    6c: " "
+    6d: " "
+    6e: " "
+    6f: " "
+    6g: " "
+    6h: " "
+    7a: "♟︎"
+    7b: "♟︎"
+    7c: "♟︎"
+    7d: " "
+    7e: "♟︎"
+    7f: "♟︎"
+    7g: "♟︎"
+    7h: "♟︎"
+    8a: "♜"
+    8b: "♞"
+    8c: "♝"
+    8d: " "
+    8e: "♚"
+    8f: "♝"
+    8g: "♞"
+    8h: "♜"
+:player1: !ruby/object:Player
+  name: Hooputes
+:player2: !ruby/object:Player
+  name: Googlems
